<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/contacts" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:gravity="center"
            android:hint="@string/userName"
            android:text="admin" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:gravity="center"
            android:hint="@string/userPass"
            android:inputType="textPassword"
            android:text="password" />

        <CheckBox
            android:id="@+id/checkBoxLogged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/ic_baseline_login_24"
            android:text="@string/keep_me_logged" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#0055FF" />

    <TextView
        android:id="@+id/txtRecoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtSignUp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/recover_your_password"
        android:textColor="#0055FF" />

</RelativeLayout>