<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/contacts" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:gravity="center"
            android:hint="@string/userName" />

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:gravity="center"
            android:hint="@string/userPass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup" />

    </LinearLayout>

</RelativeLayout>